--- a/templates/user/account.html
+++ b/templates/user/account.html
@@ -7,61 +7,61 @@
 {% endblock %}
 
 {% block content %}
-         <div class="container web-body">
+    <div class="container web-body">
 
         <div class="row settings">
             <div class="col-md-12 column" style="margin-bottom: 50px;">
                 <div class="tabbable" id="tabs">
                     <h2>账号设置</h2>
                     <ul class="nav nav-tabs">
-                        <li class="active">
-                            <a href="http://www.hubwiz.com/account#tabPanel-1" data-toggle="tab">个人信息</a>
+                        <li class="">
+                            <a href="/account#tabPanel-1" data-toggle="tab" aria-expanded="false">个人信息</a>
                         </li>
-                        <li>
-                            <a href="http://www.hubwiz.com/account#tabPanel-2" data-toggle="tab">修改密码</a>
+                        <li class="active">
+                            <a href="/account#tabPanel-2" data-toggle="tab" aria-expanded="true">修改密码</a>
                         </li>
                     </ul>
                     <div class="tab-content">
                         <div class="tab-pane active" id="tabPanel-1">
                             <div class="col-md-8">
-                                <form class="form-horizontal" role="form" method="post" id="infoForm">
+                                <form class="form-horizontal" role="form"  id="infoForm">
                                     <div class="form-group">
                                         <label for="name" class="col-md-2 control-label">昵&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称</label>
                                         <div class="col-md-8">
-                                            <input type="text" class="form-control" id="name" value="1025464043@qq.com" name="name" required="required">
+                                            <input type="text" class="form-control" id="name" value="" name="first_name" required="required">
+
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="gender" class="col-md-2 control-label">性&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;别</label>
                                         <div class="radio-inline">
                                             <label style="margin-left: 20px;">
-                                                <input data-check="true" id="gender" type="radio" name="gender" value="true" checked="checked">男
-
+                                                <input data-check="true" id="gender" type="radio" name="gender" value="male" checked="checked">男
                                             </label>
                                         </div>
                                         <div class="radio-inline">
                                             <label>
-                                                <input type="radio" checked="checked" name="gender" value="false">女
+                                                <input type="radio" checked="checked" name="gender" value="female">女
                                             </label>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="birthday" class="col-md-2 control-label">出生日期</label>
+                                        <label for="birthday" class="col-md-2 control-label" >出生日期</label>
                                         <div class="col-md-8">
-                                            <input data-value="Sun Dec 03 2017 22:19:27 GMT+0800 (CST)" type="text" class="form-control" id="birthday" name="birthday">
+                                            <input data-value="2017-12-12" type="date" class="form-control" id="birthday" name="birthday">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="telephone" class="col-md-2 control-label">手机号码</label>
                                         <div class="col-md-8">
-                                            <input type="text" class="form-control" id="telephone" name="telephone" value="" >
+                                            <input type="text" class="form-control" id="telephone" name="mobile" value="" >
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="job" class="col-md-2 control-label">职&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;位</label>
                                         <div class="col-md-8">
-                                            <input type="hidden" name="jobHid" id="jobHid" value="">
-                                            <select class="form-control" name="job" hidefocus="true" id="job">
+                                            <input type="hidden" name="work" id="jobHid" value="">
+                                            <select class="form-control" name="work" hidefocus="true" id="job">
                                                 <option value="" selected="selected">请选择职位</option>
                                                 <option value="Web前端工程师">Web前端工程师</option>
                                                 <option value="PHP开发工程师">PHP开发工程师</option>
@@ -81,7 +81,7 @@
                                     <div class="form-group">
                                         <label for="company" class="col-md-2 control-label">公司名称</label>
                                         <div class="col-md-8">
-                                            <input type="text" class="form-control" id="company" name="company" value=""  placeholder="目前就职公司">
+                                            <input type="text" class="form-control" id="company" name="unit" value=""  placeholder="目前就职公司">
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -90,16 +90,15 @@
                                             <input type="text" class="form-control" id="city" name="city" value=""  placeholder="所在城市">
                                         </div>
                                     </div>
-
                                     <div class="form-group">
                                         <label for="profile" class="col-md-2  control-label">个人介绍</label>
                                         <div class="col-md-8">
-                                            <textarea class="form-control" rows="8" id="profile" name="profile">这个家伙很懒，什么也没有留下～～！</textarea>
+                                            <textarea class="form-control" rows="2" id="profile" name="desc">这个家伙很懒，什么也没有留下～～！</textarea>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <div class="col-sm-offset-2 col-md-11">
-                                            <button type="button" onclick="upInfo();" class="btn btn-success">
+                                            <button type="button" id="submit" onclick="upInfo()" class="btn btn-success">
                                                  <i class="glyphicon glyphicon-saved"></i> 更新资料
                                             </button>
                                         </div>
@@ -117,11 +116,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="tab-pane" id="tabPanel-2">
+                        <div class="tab-pane " id="tabPanel-2">
                             <div class="col-md-10 col-md-offset-1">
                             <p>请妥善保管好账户密码，定期修改密码，有助于账户安全。</p>
                             <hr>
-                            <form class="form-horizontal" method="post" id="passwordForm" role="form" action="http://www.hubwiz.com/account#">
+                            <form class="form-horizontal" id="passwordForm" role="form">
                                 <div class="form-group">
                                     <label for="password" class="col-sm-2 control-label">新密码</label>
                                     <div class="col-sm-4">
@@ -148,9 +147,7 @@
                 </div>
             </div>
         </div>
-
     </div>
-    <script src="{% static 'js/global.js' %}"></script>
 {% endblock %}
 
 
