--- a/templates/invite.html
+++ b/templates/invite.html
@@ -18,6 +18,7 @@
           </div>
           <div class="panel-body">
             <form id="invite-via-email">
+                {%  csrf_token %}
               <div class="form-group">
                 <label for="emails">邮件地址</label>
                 <input type="text" class="form-control" id="emails" placeholder="多个邮件请用逗号分开">
@@ -41,5 +42,5 @@
 {% block foot %}
     <script src="{% static 'js/jquery.validate.js' %}"></script>
     <script src="{% static 'js/messages_zh.js' %}"></script>
-    <script src="{% static 'js/invite.min.js' %}"></script>
+    <script src="{% static 'js/invite.js' %}"></script>
 {% endblock %}
