--- a/templates/service.html
+++ b/templates/service.html
@@ -1,11 +1,11 @@
 {% extends 'base/base.html' %}
 {% block cssjs %}
     {% load static %}
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-        <link rel="stylesheet" href="{% static 'css/index.min.css' %}">
-        <link rel="stylesheet" href="{% static 'css/about.css' %}">
         <link rel="stylesheet" href="{% static 'css/header.css' %}">
+        <link rel="stylesheet" href="{% static 'css/about.css' %}">
         <link rel="stylesheet" href="{% static 'css/share_style0_16.css' %}">
 
 {% endblock %}
