--- a/templates/visual.html
+++ b/templates/visual.html
@@ -18,230 +18,15 @@
     	<div class="contentTop"><h2>最新可视分析图</h2></div>
         <div class="caseList">
         	<ul id="caseList">
-              <li><a href="/html5-css3-effects/947.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017112815285594.jpg" width="300" height="180" align="three.js粒子效果" class="lazy" src="/static/img/2017112815285594.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">three.js粒子效果</div>
-        <div class="caseInfo"><div class="caseIcon ll">14985</div><div class="caseTime">2017-11-28</div></div>
-    </div>
-</a></li>
-              <li><a href="/page-useful-effects/946.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017110310080294.jpg" width="300" height="180" align="JavaScript图片缩放插件Zooming" class="lazy" src="/static/img/2017110310080294.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">JavaScript图片缩放插件Zooming</div>
-        <div class="caseInfo"><div class="caseIcon ll">6493</div><div class="caseTime">2017-11-03</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/945.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017110310000819.jpg" width="300" height="180" align="全屏幻灯片切换特效" class="lazy" src="/static/img/2017110310000819.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">全屏幻灯片切换特效</div>
-        <div class="caseInfo"><div class="caseIcon ll">10408</div><div class="caseTime">2017-11-03</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/944.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017092711323202.jpg" width="300" height="180" align="纯CSS 3D 菜单" class="lazy" src="/static/img/2017092711323202.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">纯CSS 3D 菜单</div>
-        <div class="caseInfo"><div class="caseIcon ll">17201</div><div class="caseTime">2017-09-27</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/943.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017092711323161.jpg" width="300" height="180" align="移动端画面滚动特效" class="lazy" src="/static/img/2017092711323161.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">移动端画面滚动特效</div>
-        <div class="caseInfo"><div class="caseIcon ll">8577</div><div class="caseTime">2017-09-27</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/942.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017092711323179.jpg" width="300" height="180" align="CSS3 卡片动画" class="lazy" src="/static/img/2017092711323179.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">CSS3 卡片动画</div>
-        <div class="caseInfo"><div class="caseIcon ll">5314</div><div class="caseTime">2017-09-27</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/941.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017092711174336.jpg" width="300" height="180" align="小猪CMS Banner" class="lazy" src="/static/img/2017092711174336.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">小猪CMS Banner</div>
-        <div class="caseInfo"><div class="caseIcon ll">4086</div><div class="caseTime">2017-09-27</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/940.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017092711174396.jpg" width="300" height="180" align="常用PC端banner-Swiper" class="lazy" src="/static/img/2017092711174396.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">常用PC端banner-Swiper</div>
-        <div class="caseInfo"><div class="caseIcon ll">5557</div><div class="caseTime">2017-09-27</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/939.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017092711174376.jpg" width="300" height="180" align="blur和glitch文字特效" class="lazy" src="/static/img/2017092711174376.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">blur和glitch文字特效</div>
-        <div class="caseInfo"><div class="caseIcon ll">2614</div><div class="caseTime">2017-09-27</div></div>
-    </div>
-</a></li>
-              <li><a href="/page-useful-effects/938.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017090610020308.jpg" width="300" height="180" align="js自动寻路算法-js A*算法" class="lazy" src="/static/img/2017090610020308.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">js自动寻路算法-js A*算法</div>
-        <div class="caseInfo"><div class="caseIcon ll">7314</div><div class="caseTime">2017-09-06</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/937.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017080110322892.jpg" width="300" height="180" align="SVG动画之超人飞行" class="lazy" src="/static/img/2017080110322892.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">SVG动画之超人飞行</div>
-        <div class="caseInfo"><div class="caseIcon ll">12114</div><div class="caseTime">2017-08-01</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/934.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017070915475655.jpg" width="300" height="180" align="canvas背景动画" class="lazy" src="/static/img/2017070915475655.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">canvas背景动画</div>
-        <div class="caseInfo"><div class="caseIcon ll">18369</div><div class="caseTime">2017-07-09</div></div>
-    </div>
-</a></li>
-              <li><a href="/product-listing-effects/933.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017070915475580.jpg" width="300" height="180" align="3D跟随鼠标感应悬浮动画" class="lazy" src="/static/img/2017070915475580.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">3D跟随鼠标感应悬浮动画</div>
-        <div class="caseInfo"><div class="caseIcon ll">12897</div><div class="caseTime">2017-07-09</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/932.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017070915475557.jpg" width="300" height="180" align="CSS3模仿雷达扫描动画" class="lazy" src="/static/img/2017070915475557.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">CSS3模仿雷达扫描动画</div>
-        <div class="caseInfo"><div class="caseIcon ll">12423</div><div class="caseTime">2017-07-09</div></div>
-    </div>
-</a></li>
-              <li><a href="/mobile-phone-mobile-end-effects/931.html" target="_blank">
-    <div class="caseThum"><img original="/static/img/2017070618005657.jpg" width="300" height="180" align="淘宝造物节3D酷炫空间代码" class="lazy" src="/static/img/2017070618005657.jpg" style="display: block;"></div>
-    <div class="caseBottom">
-        <div class="caseName">淘宝造物节3D酷炫空间代码</div>
-        <div class="caseInfo"><div class="caseIcon ll">9160</div><div class="caseTime">2017-07-06</div></div>
-    </div>
-</a></li>
-              <li><a href="/page-useful-effects/930.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0705/2017070516174146.jpg" width="300" height="180" align="jquery-hash" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">jquery-hash</div>
-        <div class="caseInfo"><div class="caseIcon ll">4622</div><div class="caseTime">2017-07-05</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/929.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0703/2017070317153536.jpg" width="300" height="180" align="CSS3白云飘动动画" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">CSS3白云飘动动画</div>
-        <div class="caseInfo"><div class="caseIcon ll">7674</div><div class="caseTime">2017-07-03</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/926.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0703/2017070315563683.jpg" width="300" height="180" align="Logo动画欣赏" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">Logo动画欣赏</div>
-        <div class="caseInfo"><div class="caseIcon ll">10110</div><div class="caseTime">2017-07-03</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/927.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0703/2017070316004825.jpg" width="300" height="180" align="CSS3烟雾文字特效" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">CSS3烟雾文字特效</div>
-        <div class="caseInfo"><div class="caseIcon ll">8162</div><div class="caseTime">2017-07-03</div></div>
-    </div>
-</a></li>
-              <li><a href="/mobile-phone-mobile-end-effects/925.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0625/2017062519461029.png" width="300" height="180" align="H5制作Flappy bird游戏源码" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">H5制作Flappy bird游戏源码</div>
-        <div class="caseInfo"><div class="caseIcon ll">6333</div><div class="caseTime">2017-06-25</div></div>
-    </div>
-</a></li>
-              <li><a href="/page-useful-effects/924.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0625/2017062513494289.jpg" width="300" height="180" align="全屏切换插件switchPage" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">全屏切换插件switchPage</div>
-        <div class="caseInfo"><div class="caseIcon ll">13280</div><div class="caseTime">2017-06-25</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/923.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0623/2017062311520119.jpg" width="300" height="180" align="CSS3模仿相机快门特效" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">CSS3模仿相机快门特效</div>
-        <div class="caseInfo"><div class="caseIcon ll">9585</div><div class="caseTime">2017-06-23</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/922.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0609/2017060910022964.jpg" width="300" height="180" align="CSS3霓虹灯文字特效" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">CSS3霓虹灯文字特效</div>
-        <div class="caseInfo"><div class="caseIcon ll">9435</div><div class="caseTime">2017-06-09</div></div>
-    </div>
-</a></li>
-              <li><a href="/page-useful-effects/920.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0601/2017060111000724.jpg" width="300" height="180" align="仿QQ浏览器主页效果" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">仿QQ浏览器主页效果</div>
-        <div class="caseInfo"><div class="caseIcon ll">8713</div><div class="caseTime">2017-06-01</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/919.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0525/2017052508574141.jpg" width="300" height="180" align="超酷的SVG左侧导航栏特效" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">超酷的SVG左侧导航栏特效</div>
-        <div class="caseInfo"><div class="caseIcon ll">13012</div><div class="caseTime">2017-05-25</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/918.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0524/2017052415101130.jpg" width="300" height="180" align="SVG路径动画" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">SVG路径动画</div>
-        <div class="caseInfo"><div class="caseIcon ll">9284</div><div class="caseTime">2017-05-24</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/917.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0524/2017052415101255.jpg" width="300" height="180" align="Jquery相册切换动画" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">Jquery相册切换动画</div>
-        <div class="caseInfo"><div class="caseIcon ll">10951</div><div class="caseTime">2017-05-24</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/916.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0524/2017052415101208.jpg" width="300" height="180" align="有趣的CSS3小动画欣赏" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">有趣的CSS3小动画欣赏</div>
-        <div class="caseInfo"><div class="caseIcon ll">8301</div><div class="caseTime">2017-05-24</div></div>
-    </div>
-</a></li>
-              <li><a href="/html5-css3-effects/915.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0524/2017052415101267.jpg" width="300" height="180" align="CSS3卡片动画" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">CSS3卡片动画</div>
-        <div class="caseInfo"><div class="caseIcon ll">20247</div><div class="caseTime">2017-05-24</div></div>
-    </div>
-</a></li>
-              <li><a href="/page-useful-effects/914.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0524/2017052415101235.jpg" width="300" height="180" align="网页常用大事件特效" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">网页常用大事件特效</div>
-        <div class="caseInfo"><div class="caseIcon ll">10738</div><div class="caseTime">2017-05-24</div></div>
-    </div>
-</a></li>
-              <li><a href="/page-useful-effects/910.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0518/2017051816312203.jpg" width="300" height="180" align="jkresponsivegallery.js 响应式lightbox插件" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">jkresponsivegallery.js 响应式lightbox插件</div>
-        <div class="caseInfo"><div class="caseIcon ll">6937</div><div class="caseTime">2017-05-18</div></div>
-    </div>
-</a></li>
-              <li><a href="/page-useful-effects/909.html" target="_blank">
-    <div class="caseThum"><img original="/uploadfile/2017/0518/2017051816322384.jpg" width="300" height="180" align="audioplayer.js 超好用的H5音乐播放器" class="lazy" src="/static/img/loading.jpg"></div>
-    <div class="caseBottom">
-        <div class="caseName">audioplayer.js 超好用的H5音乐播放器</div>
-        <div class="caseInfo"><div class="caseIcon ll">6575</div><div class="caseTime">2017-05-18</div></div>
-    </div>
-</a></li>
+                {% for i in chart.object_list %}
+                    <li><a href="/chart" target="_blank">
+                <div class="caseThum"><img original="{% static i.surface %}" width="300" height="180" align="{{ i.name }}" class="lazy" src="{% static i.surface %}" style="display: block;"></div>
+                <div class="caseBottom">
+                <div class="caseName">{{ i.name }}</div>
+                <div class="caseInfo"><div class="caseIcon ll">{{ i.click_num }}</div><div class="caseTime">{{ i.add_time }}</div></div>
+                </div>
+                </a></li>
+                {% endfor %}
           </ul>
         </div>
         <div class="loadMore"><a>加载更多 →</a></div>
