--- a/templates/chart.html
+++ b/templates/chart.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block content %}
         <!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
-        <div id="main" style="width: 90%;height:830px;margin-top: 70px; margin-right: auto;margin-left: auto"></div>
+        <div id="main" style="width: 90%;height:750px;margin-top: 70px; margin-right: auto;margin-left: auto;margin-bottom: 10px;"></div>
         <script src="/static/chart/chart1.js"></script>
 {% endblock %}
 
