--- a/templates/resource.html
+++ b/templates/resource.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="{% static 'css/resource.min.css' %}">
 
     <link rel="stylesheet" href="{% static 'css/home-2.css' %}">
-    <link rel="stylesheet" href="{% static 'css/book/public.css' %}">
-    <link rel="stylesheet" href="{% static 'css/book/index.css' %}">
-    <link rel="stylesheet" href="{% static 'css/book/nivo-slider.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bookpublic.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bookindex.css' %}">
+    <link rel="stylesheet" href="{% static 'css/nivo-slider.css' %}">
 
 
 
