--- a/templates/years.html
+++ b/templates/years.html
@@ -2,10 +2,10 @@
 {% block cssjs %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/invite.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/book/public.css' %}">
-    <link rel="stylesheet" href="{% static 'css/book/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/book/newStyle.css' %}">
-    <link rel="stylesheet" href="{% static 'css/book/single.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bookpublic.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bookstyle.css' %}">
+    <link rel="stylesheet" href="{% static 'css/newStyle.css' %}">
+    <link rel="stylesheet" href="{% static 'css/single.css' %}">
 {% endblock %}
 {% block content %}
     <div class="main w Ynavigation" style="margin-top: 60px">
