--- a/static/css/global.css
+++ b/static/css/global.css
@@ -56,3 +56,6 @@ small.has-error{
 .btn-fresh:focus,.btn-fresh:hover,.btn-sky.active:focus,.open>.dropdown-toggle.btn-fresh{color:#fff;background-color:#66c796;border-bottom:2px solid #529f78;outline:0}
 .btn-fresh.active,.btn-fresh:active{color:#fff;background-color:#47a877;border-top:2px solid #39865f;outline:0;margin-top:2px}
 #labBtn.active:focus,#labBtn:focus{outline:0;outline-offset:0}
+a, a:hover{
+    text-decoration: none;
+}
