--- a/templates/techdb.html
+++ b/templates/techdb.html
@@ -9,25 +9,15 @@
 
 {% endblock %}
 {% block content %}
-    <div class="content" style="margin-top: 70px">
+    <div class="content" style="margin-top: 120px;margin-bottom: 120px">
         <div class="Box10 ClearFloat">
             <div class="Box210 FloatLeft MarginLeft10">
                 <div class="ListMenu">
                     <h2><span>&nbsp;&nbsp;&nbsp;&nbsp;农业科技机构数据库</span></h2>
                     <ul>
-                        <li><a href="?id=A030401" class="{% ifequal selectid 'A030401' %}Selected{% endifequal %}">有机农业数据库</a></li>
-                        <li><a href="?id=A030205" class="{% ifequal selectid 'A030205' %}Selected{% endifequal %}">农业古籍数据库</a></li>
-                        <li><a href="?id=A030104" class="{% ifequal selectid 'A030104' %}Selected{% endifequal %}">农业科技人才数据库</a></li>
-                        <li><a href="?id=A030105" class="{% ifequal selectid 'A030105' %}Selected{% endifequal %}">农业科技机构数据库</a></li>
-                        <li><a href="?id=A030103" class="{% ifequal selectid 'A030103' %}Selected{% endifequal %}">农业获奖科技成果数据库</a></li>
-                        <li><a href="?id=A030102" class="{% ifequal selectid 'A030102' %}Selected{% endifequal %}">国内农业科研项目数据库</a></li>
-                        <li><a href="?id=A030101" class="{% ifequal selectid 'A030101' %}Selected{% endifequal %}">国际农业科研项目数据库</a></li>
-                        <li><a href="?id=A030201" class="{% ifequal selectid 'A030201' %}Selected{% endifequal %}">中文农业科技文摘数据库</a></li>
-                        <li><a href="?id=A030202" class="{% ifequal selectid 'A030202' %}Selected{% endifequal %}">外文农业科技文摘数据库</a></li>
-                        <li><a href="?id=A030403" class="{% ifequal selectid 'A030403' %}Selected{% endifequal %}">畜禽疾病防治方法数据库</a></li>
-                        <li><a href="?id=A030302" class="{% ifequal selectid 'A030302' %}Selected{% endifequal %}">农业科技政策法规数据库</a></li>
-                        <li><a href="?id=A030420" class="{% ifequal selectid 'A030420' %}Selected{% endifequal %}">农作物名优特新品种数据库</a></li>
-                        <li><a href="?id=A030301" class="{% ifequal selectid 'A030301' %}Selected{% endifequal %}">农业标准和操作规范数据库</a></li>
+                        {% for db in databases %}
+                            <li><a href="?id={{ db.id }}" class="{% ifequal selectid db.id %}Selected{% endifequal %}">{{ db.title }}</a></li>
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
@@ -41,21 +31,21 @@
                                 <table class="ListContent1 EllipsisTable">
                                         <tbody>
                                         <tr>
-                                            <th style="width:30px;">序号</th>
+                                            <th style="width:40px;">id</th>
                                             {%  for field in display_fields %}
                                                 <th>{{ field.content }}</th>
                                             {% endfor %}
                                         </tr>
                                         {% for item in items.object_list %}
                                         <tr>
-                                            <td class="TextCenter">{{ forloop.counter }}</td>
+                                            <td class="TextCenter" style="text-align: center">{{ forloop.counter }}</td>
                                             {% for content in item %}
                                                 {% ifequal forloop.counter 1 %}
-                                                    <td class="Pad_Left5 EllipsisTd">
-                                                        <a href="javascript:;" title="{{ content }}">{{ content }} </a>
+                                                    <td class="Pad_Left5 EllipsisTd" style="text-align: center;">
+                                                        <a href="javascript:;"  style="padding-left: 10px;color: rgb(0, 0, 238)" title="{{ content }}">{{ content }} </a>
                                                     </td>
                                                 {% else %}
-                                                    <td class="Pad_Left5 EllipsisTd" title="{{ content }}">{{ content }}</td>
+                                                    <td class="Pad_Left5 EllipsisTd" title="{{ content }}" style="text-align: center;">{{ content }}</td>
                                                 {% endifequal %}
                                             {% endfor %}
                                         </tr>
